--- a/README.rdoc
+++ b/README.rdoc
@@ -2,5 +2,5 @@
 
 Everybody procrastinates. There’s no way around it. But procrastination, which at its purest form should be simple and mindless, has become needlessly complex. Most sites overload users with information, requiring too much browsing to reach content that one actually enjoys. Cue doitmrw. Doitmrw delivers a beautifully simple social procrastination experience. After selecting a category from 5 basic themes: funny, inspirational, cute, weird, and random, users are matched to user uploaded content automatically. After a simple click of the upvote or downvote button, users are transported to the next post, matched based on machine learning algorithms from past upvotes and downvotes to deliver the most suitable content. 
 
-In order to make the procrastination experience truly social, doitmrw will be fully integrated with facebook. If for example Eric wants to upload something on doitmrw, he will have to sign up with facebook. If his post gets 150 upvotes, doitmrw will post a fb status like "Today Eric has helped 150 people procrastinate". On the other hand, if Eric spends lots of time on doitmrw browsing through posts, facebook will post a status “Today Eric has procrastinated for 8 hours and has officially become the King of Procrastination”. If Eric sees a great post, with a single click he can share the brilliant post with all his facebook friends and help them to waste time. In these ways, users collect procrastination points, which can later be used to buy our merchandise. Profitability for the website will also come through sponsored content, and a variety of l skins for viewing content.
+In order to make the procrastination experience truly social, doitmrw will be fully integrated with facebook. If someone called Eric wants to upload something on doitmrw, he will have to sign up with facebook. If his post gets 150 upvotes, doitmrw will post a fb status like "Today Eric has helped 150 people procrastinate". On the other hand, if Eric spends lots of time on doitmrw browsing through posts, facebook will post a status “Today Eric has procrastinated for 8 hours and has officially become the King of Procrastination”. If Eric sees a great post, with a single click he can share the brilliant post with all his facebook friends and help them to waste time. In these ways, users collect procrastination points, which can later be used to buy our merchandise. Profitability for the website will also come through sponsored content, and a variety of l skins for viewing content.
 There is no way around procrastination. That is why will we try to deliver users the best procrastination experience that will make them feel proud of wasting their valuable time.
